--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
   },
   "homepage": "https://github.com/gorhom/showcase-template#readme",
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/bob": "^0.10.0",
     "@react-native-community/eslint-config": "^1.0.0",
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/react": "^16.9.32",
     "@types/react-native": "0.62.1",
-    "commitlint": "^8.3.5",
+    "auto-changelog": "^1.16.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
