--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gorhom/showcase-template",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A template that helps developers to showcase their amazing libraries examples.",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
@@ -60,6 +60,10 @@
   "@react-native-community/bob": {
     "source": "src",
     "output": "lib",
-    "targets": ["commonjs", "module", "typescript"]
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
   }
 }
