chore: exclude example filder types from distribution

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gorhom/showcase-template": ["./src/index"]
+      "@gorhom/showcase-template": ["../src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
