docs: updated description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gorhom/showcase-template",
   "version": "0.2.0",
-  "description": "A template that helps developers to showcase their amazing libraries examples.",
+  "description": "A React Native template that helps developers to showcase their amazing libraries examples.",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/src/index.d.ts",
