--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React Native template that helps developers to showcase their amazing libraries examples.",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
-  "types": "lib/typescript/src/index.d.ts",
+  "types": "lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
   "files": [
     "src",
