--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.0"
+    "react-native": "0.62.0",
+    "react-native-safe-area-context": "^3.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
