--- a/example/package.json
+++ b/example/package.json
@@ -9,13 +9,22 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "16.11.0",
-    "react-native": "0.62.0",
-    "react-native-safe-area-context": "^3.1.8"
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.0.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "metro-react-native-babel-preset": "^0.59.0"
+    "@babel/core": "^7.13.10",
+    "@babel/runtime": "^7.13.10",
+    "@types/react": "^17",
+    "@types/react-native": "^0.64",
+    "metro-react-native-babel-preset": "^0.65.2",
+    "typescript": "^4.2.3"
   }
 }
