--- a/package.json
+++ b/package.json
@@ -36,26 +36,32 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@react-native-community/bob": "^0.10.0",
-    "@react-native-community/eslint-config": "^1.0.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/react": "^16.9.32",
-    "@types/react-native": "0.62.1",
+    "@types/react-native": "0.63.52",
     "auto-changelog": "^1.16.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.2.3",
     "jest": "^25.2.7",
     "prettier": "^2.0.2",
-    "react": "~16.11.0",
-    "react-native": "~0.62.0",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
+    "react-native-builder-bob": "^0.18.1",
+    "react-native-safe-area-context": "^3.2.0",
     "release-it": "^13.5.1",
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.3"
   },
   "peerDependencies": {
+    "@react-navigation/native": "~5.0.0",
+    "@react-navigation/stack": "~5.0.0",
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-safe-area-context": "~3.2.0"
   },
   "@react-native-community/bob": {
     "source": "src",
