--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gorhom/showcase-template",
   "version": "1.0.2",
   "description": "A React Native template that helps developers to showcase their amazing libraries examples.",
-  "main": "lib/commonjs/index.js",
+  "main": "lib/module/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "typescript": "tsc --noEmit",
-    "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint": "eslint --ext .js,.ts,.tsx . --fix",
     "build": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
@@ -34,26 +34,25 @@
   },
   "homepage": "https://github.com/gorhom/showcase-template#readme",
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "@release-it/conventional-changelog": "^1.1.0",
+    "@release-it/conventional-changelog": "^2.0.1",
     "@types/react": "^16.9.32",
     "@types/react-native": "0.63.52",
-    "auto-changelog": "^1.16.2",
+    "auto-changelog": "^2.2.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.2.3",
-    "jest": "^25.2.7",
-    "prettier": "^2.0.2",
+    "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-builder-bob": "^0.18.1",
     "react-native-safe-area-context": "^3.2.0",
-    "release-it": "^13.5.1",
+    "release-it": "^14.5.0",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
@@ -63,11 +62,10 @@
     "react-native": "*",
     "react-native-safe-area-context": "~3.2.0"
   },
-  "@react-native-community/bob": {
+  "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
     "targets": [
-      "commonjs",
       "module",
       "typescript"
     ]
