--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
+  "source": "src/index.ts",
   "files": [
     "src",
     "lib"
