--- a/exmple/app.json
+++ b/exmple/app.json
@@ -4,7 +4,7 @@
     "name": "ShowcaseTemplateExample",
     "displayName": "Showcase Template Example",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
