chore: updated dependencies

--- a/example/app.json
+++ b/example/app.json
@@ -1,19 +1,15 @@
 {
-  "displayName": "Showcase Template Example",
   "expo": {
-    "name": "ShowcaseTemplateExample",
-    "displayName": "Showcase Template Example",
+    "name": "Showcase Template",
+    "slug": "showcase-template",
     "version": "1.0.0",
-    "orientation": "default",
+    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
+      "backgroundColor": "#000"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -24,7 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#000"
       }
     },
     "web": {
