--- a/package.json
+++ b/package.json
@@ -37,34 +37,35 @@
   },
   "homepage": "https://github.com/gorhom/showcase-template#readme",
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
-    "@release-it/conventional-changelog": "^2.0.1",
-    "@types/react": "^16.9.32",
-    "@types/react-native": "0.63.52",
-    "auto-changelog": "^2.2.1",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
+    "@release-it/conventional-changelog": "^7.0.1",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "~0.72.2",
+    "auto-changelog": "^2.4.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^4.2.3",
-    "prettier": "^2.2.1",
-    "react": "17.0.1",
-    "react-native": "0.64.0",
-    "react-native-builder-bob": "^0.18.1",
-    "react-native-safe-area-context": "^3.2.0",
-    "release-it": "^14.5.0",
-    "typescript": "^4.2.3"
+    "prettier": "^3.0.3",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-builder-bob": "^0.21.3",
+    "react-native-safe-area-context": "4.7.2",
+    "release-it": "^16.1.5",
+    "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "@react-navigation/native": "~5.0.0",
-    "@react-navigation/stack": "~5.0.0",
+    "@react-navigation/native": "~6.0.0",
+    "@react-navigation/stack": "~6.0.0",
     "react": "*",
     "react-native": "*",
-    "react-native-safe-area-context": "~3.2.0"
+    "react-native-safe-area-context": "~4.7.0"
   },
   "react-native-builder-bob": {
     "source": "src",
