fix: bob builder config

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@gorhom/showcase-template",
   "version": "2.1.1",
   "description": "A React Native template that helps developers to showcase their amazing libraries examples.",
-  "main": "lib/module/index.js",
-  "module": "lib/module/index.js",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
   "source": "src/index.ts",
