--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-builder-bob": "^0.21.3",
     "react-native-safe-area-context": "4.7.2",
     "release-it": "^16.1.5",
@@ -65,6 +67,8 @@
     "@react-navigation/stack": "~6.0.0",
     "react": "*",
     "react-native": "*",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "~4.7.0"
   },
   "react-native-builder-bob": {
