chore: updated dependencies

--- a/example/app.json
+++ b/example/app.json
@@ -9,19 +9,21 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#000"
+      "backgroundColor": "#000000"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "backgroundColor": "#000000"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#000"
-      }
+        "backgroundColor": "#000000"
+      },
+      "backgroundColor": "#000000"
     },
     "web": {
       "favicon": "./assets/favicon.png"
